# Duck-Type

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  build.bat  ducktype.spec  pyproject.toml  requirements.txt  run.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: build.yml
docs/: zhihu-reply.md
native/: build_dll.bat  ducktype_hook.c  ducktype_hook.cpp  ducktype_hook.def
src/ducktype/: __init__.py  __main__.py  app.py  autostart.py  branding.py  cards.py  config.py  demo_data.py  desktop.py  firstrun.py  hotkeys.py  notify.py  paths.py  perf.py  updater.py
src/ducktype/analysis/: __init__.py  char_stats.py  common_chars.py  edit_stats.py  fun.py  gamify.py  idiom_data.py  idioms.py  insights.py  lexicon.py  metrics.py  overview.py  quote_bank.py  report_jobs.py  report_stats.py  reporting.py  segment.py  sequence_stats.py  stats.py  statutil.py  ticker.py  time_ranges.py  word_stats.py
src/ducktype/assets/: .gitkeep
src/ducktype/capture/: __init__.py  char_hook.py  foreground.py  key_hook.py
src/ducktype/core/: __init__.py  recording_policy.py
src/ducktype/dashboard/: __init__.py  api.py  relocate.py  server.py
tests/: conftest.py  test_api.py  test_config.py  test_firstrun_paths.py  test_idioms.py  test_insights.py  test_lexicon.py  test_metrics.py  test_paths.py  test_recording_policy.py  test_reports_rollups.py  test_stats.py  test_storage.py  test_v028.py
tools/: build_idioms.py  build_quote_bank.py  make_icon.py  shoot_screens.py
(+26 files in other folders)
